--- a/extra/glib-networking/build
+++ b/extra/glib-networking/build
@@ -4,6 +4,8 @@ export DESTDIR="$1"
 
 kiss-meson-config > meson.config
 
+export CFLAGS="$CFLAGS -lgnutls"
+
 meson \
     --prefix=/usr \
     --cross-file="meson.config" \
