--- a/extra/gnutls/build
+++ b/extra/gnutls/build
@@ -9,7 +9,7 @@
     --with-included-libtasn1 \
     --with-included-unistring \
     --enable-static \
-    --without-p11-kit
+    --with-p11-kit
 
 make
 make DESTDIR="$1" install
