--- a/core/curl/build
+++ b/core/curl/build
@@ -17,8 +17,8 @@
     --with-ca-fallback \
     --enable-static \
     --enable-shared \
-    --build="$(cat /etc/os-arch)-linux-musl" \
-    --host="$(cat $KISS_ROOT/etc/os-arch)-linux-musl"
+    --build=$KISS_XBUILD_TRIPLE \
+    --host=$KISS_XHOST_TRIPLE
 
 make LDFLAGS="$LDFLAGS" CFLAGS="$CFLAGS" curl_LDFLAGS=-all-static
 make DESTDIR="$1" install
