--- a/core/libressl/build
+++ b/core/libressl/build
@@ -6,9 +6,8 @@
     --disable-tests \
     --enable-shared \
     --enable-static \
-    --build="$(cat /etc/os-arch)-linux-musl" \
-    --host="$(cat ${KISS_ROOT}/etc/os-arch)-linux-musl"
-
+    --build=$KISS_XBUILD_TRIPLE \
+    --host=$KISS_XHOST_TRIPLE
 
 make
 make DESTDIR="$1" install
