--- a/extra/python/build
+++ b/extra/python/build
@@ -12,9 +12,9 @@ EOF
 
 # Reported 20-27% performance improvements.
 # See: "PythonNoSemanticInterpositionSpeedup"
-export CFLAGS="$CFLAGS -fno-semantic-interposition"
-export CXXFLAGS="$CXXFLAGS -fno-semantic-interposition"
-export LDFLAGS="$LDFLAGS -fno-semantic-interposition"
+export CFLAGS="-fno-semantic-interposition -I$KISS_ROOT/usr/include -isysroot $KISS_ROOT/usr"
+export CXXFLAGS="-fno-semantic-interposition -I$KISS_ROOT/usr/include -isysroot $KISS_ROOT/usr"
+export LDFLAGS="$LDFLAGS -fno-semantic-interposition "
 export AR=ar
 export RANLIB=ranlib
 export READELF=readelf
@@ -23,15 +23,24 @@ for patch in *.patch; do
     patch -p1 < "$patch"
 done
 
+_arch=$KISS_XHOST_TRIPLE
+
 # Detect big endian platforms
-if [ "$(cat $KISS_ROOT/etc/os-arch)" == "powerpc64" ]; then
+if [ $KISS_XHOST_ARCH == "powerpc64" ]; then
     BIG_ENDIAN=yes
 fi
 
-_arch=$(cat ${KISS_ROOT}/etc/os-arch)
+if [ "$_arch" == "armv7-linux-musleabihf" ]; then
+    _arch=arm-linux-musleabihf
+fi
 
-ac_cv_file__dev_ptc=yes \
-ac_cv_file__dev_ptmx=yes \
+# force system libs
+rm -r Modules/expat \
+    Modules/_ctypes/darwin* \
+    Modules/_ctypes/libffi*
+
+ac_cv_file__dev_ptc=no \
+ac_cv_file__dev_ptmx=no \
 ax_cv_c_float_words_bigendian="${BIG_ENDIAN:-no}" \
 ./configure \
     --prefix=/usr \
@@ -40,19 +49,21 @@ ax_cv_c_float_words_bigendian="${BIG_ENDIAN:-no}" \
     --with-system-ffi \
     --with-ensurepip=yes \
     --without-doc-strings \
-    --build="$(cat /etc/os-arch)-linux-musl" \
-    --host="$(cat ${KISS_ROOT}/etc/os-arch)-linux-musl" \
-    --target="$(cat ${KISS_ROOT}/etc/os-arch)-linux-musl" \
+    --build=$KISS_XBUILD_TRIPLE \
+    --host=$KISS_XHOST_TRIPLE \
+    --target=$KISS_XHOST_TRIPLE \
     --enable-shared \
     --disable-ipv6
 
+# Fix cross build
+sed -i 's/\-I\$(prefix)\/include \-c \$(srcdir)\/Modules\/zlibmodule.c/\-I\$(KISS_ROOT)\/usr\/include \-c \$(srcdir)\/Modules\/zlibmodule.c/' Makefile
 
 # Build zlib module explicitly, this is missed when cross building
 make
-make Modules/zlib.cpython-39-$_arch-linux-gnu.so
+make Modules/zlib.cpython-39-$_arch.so
 make DESTDIR="$1" install
 
-install -Dm644 Modules/zlib.cpython-39-$_arch-linux-gnu.so "$1/usr/lib/python3.9/lib-dynload/zlib.cpython-39-$_arch-linux-gnu.so"
+install -Dm644 Modules/zlib.cpython-39-$_arch.so "$1/usr/lib/python3.9/lib-dynload/zlib.cpython-39-$_arch.so"
 
 ln -s python3 "$1/usr/bin/python"
 ln -s pip3    "$1/usr/bin/pip"
