--- a/core/busybox/files/.config
+++ b/core/busybox/files/.config
@@ -54,7 +54,7 @@ CONFIG_EXTRA_LDFLAGS=""
 CONFIG_EXTRA_LDLIBS=""
 CONFIG_USE_PORTABLE_CODE=y
 CONFIG_STACK_OPTIMIZATION_386=y
-CONFIG_STATIC_LIBGCC=n
+CONFIG_STATIC_LIBGCC=y
 
 #
 # Installation Options ("make install" behavior)
