--- a/xorg/libXrandr/build
+++ b/xorg/libXrandr/build
@@ -3,8 +3,8 @@
 ./configure \
     --prefix=/usr \
     --enable-malloc0returnsnull \
-    --build="$(cat /etc/os-arch)-linux-musl" \
-    --host="$(cat ${KISS_ROOT}/etc/os-arch)-linux-musl"
+    --build=$KISS_XBUILD_TRIPLE \
+    --host=$KISS_XHOST_TRIPLE
 
 make
 make DESTDIR="$1" install
