--- a/xorg/libXt/build
+++ b/xorg/libXt/build
@@ -8,8 +8,8 @@ export LDFLAGS_FOR_BUILD=""
 
 ./configure \
     --prefix=/usr \
-    --build="$(cat /etc/os-arch)-linux-musl" \
-    --host="$(cat ${KISS_ROOT}/etc/os-arch)-linux-musl" \
+    --build=$KISS_XBUILD_TRIPLE \
+    --host=$KISS_XHOST_TRIPLE \
     --enable-malloc0returnsnull
 
 make
