--- a/xorg/libxcb/build
+++ b/xorg/libxcb/build
@@ -4,8 +4,8 @@ sed -i 's/pthread-stubs //' configure
 
 ./configure \
     --prefix=/usr \
-    --build="$(cat /etc/os-arch)-linux-musl" \
-    --host="$(cat ${KISS_ROOT}/etc/os-arch)-linux-musl"
+    --build=$KISS_XBUILD_TRIPLE \
+    --host=$KISS_XHOST_TRIPLE
 
 make
 make DESTDIR="$1" install
