--- a/xorg/xf86-video-nouveau/build
+++ b/xorg/xf86-video-nouveau/build
@@ -7,8 +7,8 @@ export CFLAGS="$CFLAGS -fcommon"
 
 ./configure \
     --prefix=/usr \
-    --build="$(cat /etc/os-arch)-linux-musl" \
-    --host="$(cat ${KISS_ROOT}/etc/os-arch)-linux-musl"
+    --build=$KISS_XBUILD_TRIPLE \
+    --host=$KISS_XHOST_TRIPLE
 
 make
 make DESTDIR="$1" install
