--- a/xorg/xf86-video-vesa/build
+++ b/xorg/xf86-video-vesa/build
@@ -4,8 +4,8 @@ export LDFLAGS="-Wl,-z,lazy"
 
 ./configure \
     --prefix=/usr \
-    --build="$(cat /etc/os-arch)-linux-musl" \
-    --host="$(cat ${KISS_ROOT}/etc/os-arch)-linux-musl"
+    --build=$KISS_XBUILD_TRIPLE \
+    --host=$KISS_XHOST_TRIPLE
 
 make
 make DESTDIR="$1" install
