--- a/xorg/xinit/build
+++ b/xorg/xinit/build
@@ -2,8 +2,8 @@
 
 ./configure \
     --prefix=/usr \
-    --build="$(cat /etc/os-arch)-linux-musl" \
-    --host="$(cat ${KISS_ROOT}/etc/os-arch)-linux-musl" \
+    --build=$KISS_XBUILD_TRIPLE \
+    --host=$KISS_XHOST_TRIPLE \
     --with-xinitdir=/etc/X11/xinit
 
 make
