--- a/core/llvm/build
+++ b/core/llvm/build
@@ -3,6 +3,8 @@
 patch -p1 < libcxx-musl.patch
 patch -p1 < llvm-006-aarch64-mf_exec.patch
 patch -p1 < crt.patch
+patch -p1 < clang-004-ppc64-musl-elfv2.patch
+patch -p1 < llvm-002-musl-ppc64-elfv2.patch
 
 # Disable sanitizer
 sed -i 's/!defined(_GCC_MAX_ALIGN_T)/& \&\& !defined(__DEFINED_max_align_t)/' libcxx/include/stddef.h
@@ -124,7 +126,7 @@ ln -s -f llvm-strings strings
 ln -s -f llvm-objcopy otool
 
 # symlinks to crtbegin/crtend files
-# Mainly done for Rust.
+# This is mainly done for Rust.
 cd $1/usr/lib/clang/12.0.0/lib/linux
 install -Dm755 clang_rt.crtbegin-$libname.o $1/usr/lib/crtbegin.o
 install -Dm755 clang_rt.crtend-$libname.o   $1/usr/lib/crtend.o
