--- a/xorg/icewm/build
+++ b/xorg/icewm/build
@@ -1,6 +1,6 @@
 #!/bin/sh -e
 
-export MOREFLAGS="-logg -lopus -lvorbis -lvorbisenc -lFLAC"
+#export MOREFLAGS="-logg -lopus -lvorbis -lvorbisenc -lFLAC"
 export DESTDIR="$1"
 
 kiss-cmake-config > cmake.config
