--- a/xorg/pixman/build
+++ b/xorg/pixman/build
@@ -1,10 +1,15 @@
 #!/bin/sh -e
 
+if [ "$KISS_XHOST_ARCH" = "armv7" ]; then
+    extraopts="--disable-arm-simd --disable-arm-neon"
+fi
+
 ./configure \
     --prefix=/usr \
     --disable-gtk \
     --build=$KISS_XBUILD_TRIPLE \
-    --host=$KISS_XHOST_TRIPLE
+    --host=$KISS_XHOST_TRIPLE \
+    $extraopts
 
 make
 make DESTDIR="$1" install
