--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,6 @@
 [submodule "modules/repo"]
 	path = modules/repo
-	url = https://github.com/kiss-community/repo-main.git
+	url = https://github.com/kisslinux/repo.git
 [submodule "modules/community"]
 	path = modules/community
 	url = https://github.com/kiss-community/repo-community.git
-[submodule "modules/kiss-wayland"]
-	path = modules/kiss-wayland
-	url = https://github.com/Himmalerin/kiss-wayland.git
