--- a/core/pigz/build
+++ b/core/pigz/build
@@ -18,3 +18,4 @@ cp  -f pigz   "$DESTDIR/usr/bin"
 ln -sf pigz   "$DESTDIR/usr/bin/gzip"
 cp  -f pigz.1 "$DESTDIR/usr/share/man/man1"
 ln -sf pigz.1 "$DESTDIR/usr/share/man/man1/gzip.1"
+ln -sf pigz   "$DESTDIR/usr/bin/zcat"
