Update wayland, remove orphan packages

--- a/wayland/wlroots/build
+++ b/wayland/wlroots/build
@@ -1,5 +1,8 @@
 #!/bin/sh -e
 
+export CFLAGS="-Wno-unused-but-set-variable"
+export PKG_CONFIG_SYSROOT_DIR=
+
 kiss-meson-config > meson.config
 
 meson \
