--- a/wayland/libinput/build
+++ b/wayland/libinput/build
@@ -4,10 +4,31 @@ patch -p1 < evdev-wrap.patch
 
 export CFLAGS="$CFLAGS -fPIC"
 
+# Doesn't have riscv64 in mtdev config.sub, but evdev does.
+cp evdev/build-aux/config.sub mtdev/config-aux/
+
+for pkg in mtdev evdev; do (
+    cd "$pkg"
+
+    ./configure \
+        --prefix=/usr \
+        --build=$KISS_XBUILD_TRIPLE \
+        --host=$KISS_XHOST_TRIPLE \
+        --disable-shared \
+        --disable-gcov
+
+    make
+    make DESTDIR="$OLDPWD" install
+) done
+
 # Build fails with clang due to -Werror (forced on) and
 # -Wunused-command-line-argument which is triggered by.
 # the below CFLAGS.
 export CFLAGS="-Wno-unused-command-line-argument $CFLAGS"
+
+export PKG_CONFIG_PATH="$PWD/usr/lib/pkgconfig"
+export CFLAGS="$CFLAGS -I$PWD/usr/include -L$PWD/usr/lib"
+export CFLAGS="$CFLAGS -I$PWD/usr/include/libevdev-1.0"
 
 kiss-meson-config > meson.config
 
@@ -23,6 +44,10 @@ meson \
     -Dtests=false \
     -Dlibwacom=false \
     . output
+
+# Fix linking on cross builds
+sed -i "s| /usr/lib/libevdev.so| $PWD/usr/lib/libevdev.a|g" ./output/build.ninja
+sed -i "s| /usr/lib/libmtdev.so| $PWD/usr/lib/libmtdev.a|g" ./output/build.ninja
 
 ninja -C output
 ninja -C output install
