--- a/wayland/sway/build
+++ b/wayland/sway/build
@@ -1,29 +1,22 @@
 #!/bin/sh -e
 
 patch -p1 < no-evdev.patch
+patch -p1 < llvm-13.patch
 
-# Default background color.
-sed 's/0.25f, 0.25f, 0.25f/0.929, 0.870, 0.678/' \
-    sway/desktop/render.c > _
-mv -f _ sway/desktop/render.c
+export CFLAGS="$CFLAGS"
+export PKG_CONFIG_SYSROOT_DIR=
 
 kiss-meson-config > meson.config
 
 meson \
     --prefix=/usr \
     --cross-file="meson.config" \
-    -Dexamples=false \
     -Dxwayland=disabled \
-    -Dx11-backend=disabled \
-    -Dxcb-errors=disabled \
-    -Dxcb-icccm=disabled \
+    -Ddefault-wallpaper=false \
+    -Dzsh-completions=false \
+    -Dbash-completions=false \
+    -Dfish-completions=false \
     . build
 
 ninja -C build
 ninja -C build install
-
-rm -rf \
-    "$1/usr/share/fish" \
-    "$1/usr/share/bash-completion" \
-    "$1/usr/share/backgrounds" \
-    "$1/usr/share/zsh"
