--- a/wayland/wayland/build
+++ b/wayland/wayland/build
@@ -5,17 +5,23 @@ if [ "$KISS_ROOT" ]; then
         echo "Error: to cross-build wayland, you need to have it on your build machine first."
         exit 1
     fi
-    opts="--with-host-scanner"
+    opts="--cross-file=meson.config"
 fi
 
-./configure \
-    --prefix=/usr \
-    --build=$KISS_XBUILD_TRIPLE \
-    --host=$KISS_XHOST_TRIPLE \
-    $opts \
-    --disable-documentation \
-    --disable-dtd-validation \
-    --enable-static
+kiss-meson-config > meson.config
 
-make
-make install
+# It tries to use the target wayland-scanner. Use host instead.
+sed -i "s/scanner_dep =/#scanner_dep =/g" src/meson.build
+sed -i "s/find_program(scanner_dep\.get_pkgconfig_variable('wayland_scanner'))/'\/usr\/bin\/wayland-scanner'/g" src/meson.build
+
+meson \
+    --prefix=/usr \
+    -Ddefault_library=both \
+    -Dtests=false \
+    -Ddocumentation=false \
+    -Ddtd_validation=false \
+    $opts \
+    . build
+
+ninja -C build
+ninja -C build install
