--- a/extra/libsixel/build
+++ b/extra/libsixel/build
@@ -1,9 +1,15 @@
 #!/bin/sh -e
 
-./configure \
-    --prefix=/usr \
-    --build=$KISS_XBUILD_TRIPLE \
-    --host=$KISS_XHOST_TRIPLE
+kiss-meson-config > config.meson
 
-make
-make install
+meson \
+    --prefix=/usr \
+    --cross-file="config.meson" \
+    --buildtype=plain \
+    -Dgd=disabled \
+    -Djpeg=enabled \
+    -Dpng=enabled \
+    . build
+
+ninja -C build
+ninja -C build install
