--- a/wayland/pixman/build
+++ b/wayland/pixman/build
@@ -1,10 +1,17 @@
 #!/bin/sh -e
 
+# Clang assembler can't do this yet
+if [ $KISS_XHOST_ARCH = "armv7" ]; then
+    opts="--disable-arm-simd --disable-arm-neon"
+fi
+
 ./configure \
     --prefix=/usr \
     --build=$KISS_XBUILD_TRIPLE \
     --host=$KISS_XHOST_TRIPLE \
-    --disable-gtk
+    --disable-gtk \
+    --disable-arm-simd \
+    $opts
 
 make
 make install
