[ffmpeg] Fix build on arm 32-bit

--- a/extra/ffmpeg/build
+++ b/extra/ffmpeg/build
@@ -8,7 +8,7 @@ export CXXFLAGS="$CXXFLAGS -fno-lto"
 
 case $KISS_XHOST_ARCH in
    aarch64)     target=aarch64;;
-   arm)         target=arm;;
+   armv7)       target=armv7;;
    i686)        target=i686;;
    powerpc64)   target=ppc64;;
    powerpc64le) target=ppc64;;
