--- a/system/atf/build
+++ b/system/atf/build
@@ -5,20 +5,16 @@ if [ "$KISS_XHOST_ARCH" != "aarch64" ]; then
     exit 1
 fi
 
-for patch in *.patch; do
-    echo "PATCHING: $patch"
-    patch -p1 < "$patch"
-done
+patch -p1 < rk3399-baudrate.patch
 
-export CFLAGS=" -fno-stack-protector -Wno-error=attributes "
-export CXXFLAGS=$CFLAGS
 export PATH=.:/usr/gnu/bin:$PATH
 export M0_CROSS_COMPILE="arm-none-eabi-"
 export CROSS_COMPILE="aarch64-linux-musl-"
-unset LDFLAGS
-
+unset CFLAGS CXXFLAGS CPPFLAGS LDFLAGS
 
 mkdir -p $1/usr/share/atf/rk3399 $1/usr/share/atf/sun50i_a64
+sed -i 's/\-Wall \-O3 \-nostdlib/\-Wall \-Os \-s \-fno\-PIC \-static \-nostdlib/g' plat/rockchip/rk3399/drivers/m0/Makefile
+
 
 # Build for rk3399 (Pinebook Pro, RockPro64 etc.)
 make DEBUG=0 PLAT=rk3399 bl31
