--- a/system/uboot-pinephone/files/.config
+++ b/system/uboot-pinephone/files/.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# U-Boot 2021.07 Configuration
+# U-Boot 2021.10 Configuration
 #
 
 #
@@ -40,6 +40,7 @@ CONFIG_ARM64=y
 # CONFIG_GIC_V3_ITS is not set
 CONFIG_STATIC_RELA=y
 CONFIG_DMA_ADDR_T_64BIT=y
+CONFIG_GPIO_EXTRA_HEADER=y
 CONFIG_ARM_ASM_UNIFIED=y
 # CONFIG_SYS_ARM_CACHE_CP15 is not set
 # CONFIG_SYS_ARM_MMU is not set
@@ -58,19 +59,12 @@ CONFIG_ARM_SMCCC=y
 CONFIG_ENABLE_ARM_SOC_BOOT0_HOOK=y
 CONFIG_ARM64_SUPPORT_AARCH32=y
 # CONFIG_ARCH_AT91 is not set
-# CONFIG_TARGET_EDB93XX is not set
 # CONFIG_TARGET_ASPENITE is not set
-# CONFIG_TARGET_GPLUGD is not set
 # CONFIG_ARCH_DAVINCI is not set
 # CONFIG_ARCH_KIRKWOOD is not set
 # CONFIG_ARCH_MVEBU is not set
 # CONFIG_ARCH_ORION5X is not set
-# CONFIG_TARGET_SPEAR300 is not set
-# CONFIG_TARGET_SPEAR310 is not set
-# CONFIG_TARGET_SPEAR320 is not set
-# CONFIG_TARGET_SPEAR600 is not set
 # CONFIG_TARGET_STV0991 is not set
-# CONFIG_TARGET_X600 is not set
 # CONFIG_TARGET_FLEA3 is not set
 # CONFIG_ARCH_BCM283X is not set
 # CONFIG_ARCH_BCM63158 is not set
@@ -93,6 +87,7 @@ CONFIG_ARM64_SUPPORT_AARCH32=y
 # CONFIG_ARCH_LPC32XX is not set
 # CONFIG_ARCH_IMX8 is not set
 # CONFIG_ARCH_IMX8M is not set
+# CONFIG_ARCH_IMX8ULP is not set
 # CONFIG_ARCH_IMXRT is not set
 # CONFIG_ARCH_MX23 is not set
 # CONFIG_ARCH_MX25 is not set
@@ -154,6 +149,7 @@ CONFIG_ARCH_SUNXI=y
 # CONFIG_TARGET_SL28 is not set
 # CONFIG_TARGET_COLIBRI_PXA270 is not set
 # CONFIG_ARCH_UNIPHIER is not set
+# CONFIG_ARCH_SYNQUACER is not set
 # CONFIG_ARCH_STM32 is not set
 # CONFIG_ARCH_STI is not set
 # CONFIG_ARCH_STM32MP is not set
@@ -166,7 +162,7 @@ CONFIG_ARCH_SUNXI=y
 # CONFIG_TARGET_PRESIDIO_ASIC is not set
 # CONFIG_TARGET_XENGUEST_ARM64 is not set
 CONFIG_SYS_TEXT_BASE=0x4a000000
-CONFIG_SPL_GPIO_SUPPORT=y
+CONFIG_SPL_GPIO=y
 CONFIG_SPL_LIBCOMMON_SUPPORT=y
 CONFIG_SPL_LIBGENERIC_SUPPORT=y
 CONFIG_SYS_MALLOC_F_LEN=0x2000
@@ -177,7 +173,7 @@ CONFIG_DEFAULT_DEVICE_TREE="sun50i-a64-pinephone-1.2"
 CONFIG_SPL_TEXT_BASE=0x10060
 CONFIG_SPL_MMC_SUPPORT=y
 CONFIG_SPL_SERIAL_SUPPORT=y
-# CONFIG_SPL_DRIVERS_MISC_SUPPORT is not set
+# CONFIG_SPL_DRIVERS_MISC is not set
 CONFIG_SPL_STACK_R_ADDR=0x4fe00000
 CONFIG_SPL_SYS_MALLOC_F_LEN=0x2000
 CONFIG_ERR_PTR_OFFSET=0x0
@@ -217,7 +213,7 @@ CONFIG_ARM_BOOT_HOOK_RMR=y
 CONFIG_SUNXI_DRAM_LPDDR3=y
 # CONFIG_SUNXI_DRAM_DDR3_1333 is not set
 CONFIG_SUNXI_DRAM_LPDDR3_STOCK=y
-CONFIG_DRAM_CLK=552
+CONFIG_DRAM_CLK=492
 CONFIG_DRAM_ZQ=3881949
 CONFIG_DRAM_ODT_EN=y
 CONFIG_SYS_CLK_FREQ=816000000
@@ -254,8 +250,8 @@ CONFIG_GMAC_TX_DELAY=0
 CONFIG_PINEPHONE_DT_SELECTION=y
 CONFIG_BLUETOOTH_DT_DEVICE_FIXUP=""
 # CONFIG_CHIP_DIP_SCAN is not set
-CONFIG_SPL_FS_FAT=y
-CONFIG_SPL_LIBDISK_SUPPORT=y
+# CONFIG_SPL_FS_FAT is not set
+# CONFIG_SPL_LIBDISK_SUPPORT is not set
 # CONFIG_SPL_SPI_SUPPORT is not set
 # CONFIG_ARMV8_SPL_EXCEPTION_VECTORS is not set
 # CONFIG_ARMV8_MULTIENTRY is not set
@@ -276,6 +272,8 @@ CONFIG_PSCI_RESET=y
 # CONFIG_IMX_SECO_DEK_ENCAP is not set
 # CONFIG_CMD_HDMIDETECT is not set
 CONFIG_IMX_DCD_ADDR=0x00910000
+# CONFIG_SPL_LOAD_IMX_CONTAINER is not set
+CONFIG_IMX_CONTAINER_CFG=""
 
 #
 # ARM debug
@@ -291,6 +289,9 @@ CONFIG_BUILD_TARGET=""
 #
 CONFIG_LOCALVERSION=""
 CONFIG_LOCALVERSION_AUTO=y
+CONFIG_CC_IS_GCC=y
+CONFIG_GCC_VERSION=110200
+CONFIG_CLANG_VERSION=0
 CONFIG_CC_OPTIMIZE_FOR_SIZE=y
 # CONFIG_OPTIMIZE_INLINING is not set
 # CONFIG_SPL_OPTIMIZE_INLINING is not set
@@ -331,9 +332,6 @@ CONFIG_SYS_SRAM_SIZE=0x0
 # CONFIG_ANDROID_BOOT_IMAGE is not set
 CONFIG_FIT=y
 CONFIG_FIT_EXTERNAL_OFFSET=0x0
-CONFIG_FIT_ENABLE_SHA256_SUPPORT=y
-# CONFIG_FIT_ENABLE_SHA384_SUPPORT is not set
-# CONFIG_FIT_ENABLE_SHA512_SUPPORT is not set
 CONFIG_FIT_FULL_CHECK=y
 # CONFIG_FIT_SIGNATURE is not set
 # CONFIG_FIT_CIPHER is not set
@@ -382,7 +380,7 @@ CONFIG_BOOTSTAGE_STASH_SIZE=0x1000
 # Autoboot options
 #
 CONFIG_AUTOBOOT=y
-CONFIG_BOOTDELAY=2
+CONFIG_BOOTDELAY=0
 # CONFIG_AUTOBOOT_KEYED is not set
 # CONFIG_AUTOBOOT_USE_MENUKEY is not set
 # CONFIG_USE_BOOTARGS is not set
@@ -390,7 +388,7 @@ CONFIG_BOOTDELAY=2
 CONFIG_USE_BOOTCOMMAND=y
 CONFIG_BOOTCOMMAND="run distro_bootcmd"
 CONFIG_USE_PREBOOT=y
-CONFIG_PREBOOT="usb start"
+CONFIG_PREBOOT=""
 CONFIG_DEFAULT_FDT_FILE=""
 
 #
@@ -409,9 +407,9 @@ CONFIG_SYS_CONSOLE_IS_IN_ENV=y
 # CONFIG_SYS_CONSOLE_OVERWRITE_ROUTINE is not set
 # CONFIG_SYS_CONSOLE_ENV_OVERWRITE is not set
 # CONFIG_SYS_CONSOLE_INFO_QUIET is not set
-CONFIG_SYS_STDIO_DEREGISTER=y
+# CONFIG_SYS_STDIO_DEREGISTER is not set
 # CONFIG_SPL_SYS_STDIO_DEREGISTER is not set
-CONFIG_SYS_DEVICE_NULLDEV=y
+# CONFIG_SYS_DEVICE_NULLDEV is not set
 
 #
 # Logging
@@ -442,6 +440,7 @@ CONFIG_MISC_INIT_R=y
 # Security support
 #
 CONFIG_HASH=y
+CONFIG_SPL_HASH=y
 # CONFIG_STACKPROTECTOR is not set
 
 #
@@ -463,6 +462,7 @@ CONFIG_SPL_FRAMEWORK=y
 # CONFIG_SPL_FRAMEWORK_BOARD_INIT_F is not set
 CONFIG_SPL_SYS_STACK_F_CHECK_BYTE=0xaa
 # CONFIG_SPL_SYS_REPORT_STACK_F_USAGE is not set
+# CONFIG_SPL_SHOW_ERRORS is not set
 
 #
 # PowerPC and LayerScape SPL Boot options
@@ -477,33 +477,30 @@ CONFIG_SPL_STACK_R_MALLOC_SIMPLE_LEN=0x100000
 # CONFIG_SPL_SEPARATE_BSS is not set
 CONFIG_SPL_BANNER_PRINT=y
 # CONFIG_SPL_DISPLAY_PRINT is not set
-# CONFIG_SYS_MMCSD_RAW_MODE_U_BOOT_USE_SECTOR is not set
+CONFIG_SYS_MMCSD_RAW_MODE_U_BOOT_USE_SECTOR=y
+CONFIG_SYS_MMCSD_RAW_MODE_U_BOOT_SECTOR=0x40
+CONFIG_SYS_MMCSD_RAW_MODE_U_BOOT_DATA_PART_OFFSET=0x10
 # CONFIG_SYS_MMCSD_RAW_MODE_U_BOOT_USE_PARTITION is not set
-# CONFIG_SPL_CRC32_SUPPORT is not set
-# CONFIG_SPL_MD5_SUPPORT is not set
-# CONFIG_SPL_SHA1_SUPPORT is not set
-# CONFIG_SPL_SHA256_SUPPORT is not set
-# CONFIG_SPL_SHA384_SUPPORT is not set
-# CONFIG_SPL_SHA512_SUPPORT is not set
+# CONFIG_SPL_CRC32 is not set
+# CONFIG_SPL_MD5 is not set
 CONFIG_SPL_FIT_IMAGE_TINY=y
 # CONFIG_SPL_CACHE_SUPPORT is not set
 # CONFIG_SPL_CPU is not set
-# CONFIG_SPL_CRYPTO_SUPPORT is not set
-# CONFIG_SPL_HASH_SUPPORT is not set
+# CONFIG_SPL_CRYPTO is not set
 # CONFIG_SPL_DMA is not set
 # CONFIG_SPL_ENV_SUPPORT is not set
-CONFIG_SPL_FS_EXT4=y
+# CONFIG_SPL_FS_EXT4 is not set
 # CONFIG_SPL_FS_SQUASHFS is not set
 # CONFIG_SPL_FAT_WRITE is not set
 # CONFIG_SPL_FPGA is not set
-# CONFIG_SPL_I2C_SUPPORT is not set
+# CONFIG_SPL_I2C is not set
 # CONFIG_SPL_DM_MAILBOX is not set
 CONFIG_SYS_MMCSD_FS_BOOT_PARTITION=1
 # CONFIG_SPL_MMC_TINY is not set
 # CONFIG_SPL_MMC_WRITE is not set
 # CONFIG_SPL_MPC8XXX_INIT_DDR_SUPPORT is not set
 # CONFIG_SPL_MTD_SUPPORT is not set
-# CONFIG_SPL_MUSB_NEW_SUPPORT is not set
+# CONFIG_SPL_MUSB_NEW is not set
 # CONFIG_SPL_NAND_SUPPORT is not set
 # CONFIG_SPL_NAND_DRIVERS is not set
 # CONFIG_SPL_NAND_ECC is not set
@@ -519,7 +516,7 @@ CONFIG_SYS_MMCSD_FS_BOOT_PARTITION=1
 # CONFIG_SPL_PCH_SUPPORT is not set
 # CONFIG_SPL_POST_MEM_SUPPORT is not set
 # CONFIG_SPL_DM_RESET is not set
-CONFIG_SPL_POWER_SUPPORT=y
+CONFIG_SPL_POWER=y
 # CONFIG_SPL_POWER_DOMAIN is not set
 # CONFIG_SPL_RAM_SUPPORT is not set
 # CONFIG_SPL_REMOTEPROC is not set
@@ -527,9 +524,9 @@ CONFIG_SPL_POWER_SUPPORT=y
 # CONFIG_SPL_SATA_SUPPORT is not set
 # CONFIG_SPL_SPI_FLASH_MTD is not set
 # CONFIG_SPL_THERMAL is not set
-# CONFIG_SPL_USB_HOST_SUPPORT is not set
+# CONFIG_SPL_USB_HOST is not set
 # CONFIG_SPL_USB_GADGET is not set
-# CONFIG_SPL_WATCHDOG_SUPPORT is not set
+# CONFIG_SPL_WATCHDOG is not set
 # CONFIG_SPL_YMODEM_SUPPORT is not set
 # CONFIG_SPL_ATF is not set
 # CONFIG_SPL_AM33XX_ENABLE_RTC32K_OSC is not set
@@ -679,9 +676,7 @@ CONFIG_CMD_SF=y
 # CONFIG_CMD_SPI is not set
 # CONFIG_CMD_TSI148 is not set
 # CONFIG_CMD_UNIVERSE is not set
-CONFIG_CMD_USB=y
 # CONFIG_CMD_USB_SDP is not set
-# CONFIG_CMD_USB_MASS_STORAGE is not set
 
 #
 # Shell scripting commands
@@ -690,6 +685,7 @@ CONFIG_CMD_ECHO=y
 CONFIG_CMD_ITEST=y
 CONFIG_CMD_SOURCE=y
 CONFIG_CMD_SETEXPR=y
+# CONFIG_CMD_SETEXPR_FMT is not set
 
 #
 # Android support commands
@@ -736,7 +732,6 @@ CONFIG_CMD_BLOCK_CACHE=y
 # CONFIG_CMD_CLS is not set
 # CONFIG_CMD_EFIDEBUG is not set
 # CONFIG_CMD_EXCEPTION is not set
-CONFIG_CMD_LED=y
 # CONFIG_CMD_DATE is not set
 # CONFIG_CMD_TIME is not set
 # CONFIG_CMD_GETTIME is not set
@@ -796,6 +791,7 @@ CONFIG_MTDPARTS_DEFAULT=""
 # CONFIG_CMD_LOG is not set
 # CONFIG_CMD_TRACE is not set
 # CONFIG_CMD_UBI is not set
+# CONFIG_MMC_SPEED_MODE_SET is not set
 
 #
 # Partition Types
@@ -814,8 +810,8 @@ CONFIG_EFI_PARTITION_ENTRIES_NUMBERS=56
 CONFIG_EFI_PARTITION_ENTRIES_OFF=0
 # CONFIG_SPL_EFI_PARTITION is not set
 CONFIG_PARTITION_UUIDS=y
-# CONFIG_SPL_PARTITION_UUIDS is not set
-# CONFIG_PARTITION_TYPE_GUID is not set
+CONFIG_SPL_PARTITION_UUIDS=y
+CONFIG_PARTITION_TYPE_GUID=y
 CONFIG_SUPPORT_OF_CONTROL=y
 CONFIG_DTC=y
 CONFIG_PYLIBFDT=y
@@ -855,7 +851,7 @@ CONFIG_ENV_IS_IN_FAT=y
 # CONFIG_ENV_IS_IN_SPI_FLASH is not set
 # CONFIG_SYS_REDUNDAND_ENVIRONMENT is not set
 CONFIG_ENV_FAT_INTERFACE="mmc"
-CONFIG_ENV_FAT_DEVICE_AND_PART="1:auto"
+CONFIG_ENV_FAT_DEVICE_AND_PART=":auto"
 CONFIG_ENV_FAT_FILE="uboot.env"
 CONFIG_SYS_RELOC_GD_ENV_ADDR=y
 CONFIG_SYS_MMC_ENV_DEV=0
@@ -875,6 +871,7 @@ CONFIG_NET=y
 # CONFIG_IP_DEFRAG is not set
 CONFIG_TFTP_BLOCKSIZE=1468
 CONFIG_TFTP_WINDOWSIZE=1
+# CONFIG_TFTP_TSIZE is not set
 # CONFIG_SERVERIP_FROM_PROXYDHCP is not set
 CONFIG_SERVERIP_FROM_PROXYDHCP_DELAY_MS=100
 
@@ -940,6 +937,7 @@ CONFIG_BLOCK_CACHE=y
 # CONFIG_CACHE is not set
 # CONFIG_L2X0_CACHE is not set
 # CONFIG_NCORE_CACHE is not set
+# CONFIG_SIFIVE_CCACHE is not set
 
 #
 # Clock
@@ -947,7 +945,9 @@ CONFIG_BLOCK_CACHE=y
 CONFIG_CLK=y
 # CONFIG_SPL_CLK_CCF is not set
 # CONFIG_CLK_CCF is not set
+# CONFIG_CLK_XLNX_CLKWZRD is not set
 # CONFIG_CLK_CDCE9XX is not set
+# CONFIG_CLK_K210 is not set
 # CONFIG_CLK_AT91 is not set
 CONFIG_CLK_SUNXI=y
 # CONFIG_CLK_SUN4I_A10 is not set
@@ -966,6 +966,8 @@ CONFIG_CLK_SUN50I_A64=y
 # CONFIG_CLK_TI_AM3_DPLL is not set
 # CONFIG_CLK_TI_CTRL is not set
 # CONFIG_CLK_TI_GATE is not set
+# CONFIG_CLK_K3 is not set
+# CONFIG_SPL_CLK_K3 is not set
 # CONFIG_ICS8N3QV01 is not set
 # CONFIG_CLK_MPC83XX is not set
 # CONFIG_CPU is not set
@@ -1028,6 +1030,7 @@ CONFIG_ARM_PSCI_FW=y
 # CONFIG_IPROC_GPIO is not set
 # CONFIG_HSDK_CREG_GPIO is not set
 # CONFIG_LPC32XX_GPIO is not set
+# CONFIG_MCP230XX_GPIO is not set
 # CONFIG_MSM_GPIO is not set
 # CONFIG_MXC_GPIO is not set
 # CONFIG_MXS_GPIO is not set
@@ -1047,15 +1050,13 @@ CONFIG_SUNXI_GPIO=y
 # CONFIG_SPL_DM_PCA953X is not set
 # CONFIG_MPC8XXX_GPIO is not set
 # CONFIG_NX_GPIO is not set
+# CONFIG_NOMADIK_GPIO is not set
 
 #
 # Hardware Spinlock Support
 #
 # CONFIG_DM_HWSPINLOCK is not set
-
-#
-# I2C support
-#
+CONFIG_I2C=y
 CONFIG_DM_I2C=y
 # CONFIG_I2C_SET_DEFAULT_BUS_NUM is not set
 # CONFIG_DM_I2C_GPIO is not set
@@ -1083,9 +1084,7 @@ CONFIG_DM_KEYBOARD=y
 #
 # LED Support
 #
-CONFIG_LED=y
-CONFIG_LED_BLINK=y
-# CONFIG_LED_GPIO is not set
+# CONFIG_LED is not set
 # CONFIG_LED_STATUS is not set
 
 #
@@ -1144,6 +1143,7 @@ CONFIG_MMC_VERBOSE=y
 # CONFIG_MMC_SDHCI is not set
 CONFIG_MMC_SUNXI=y
 CONFIG_MMC_SUNXI_HAS_NEW_MODE=y
+# CONFIG_MMC_PITON is not set
 # CONFIG_STM32_SDMMC2 is not set
 # CONFIG_FTSDC010 is not set
 # CONFIG_FSL_ESDHC is not set
@@ -1165,9 +1165,11 @@ CONFIG_DM_SPI_FLASH=y
 CONFIG_SPI_FLASH=y
 CONFIG_SF_DEFAULT_BUS=0
 CONFIG_SF_DEFAULT_CS=0
-CONFIG_SF_DEFAULT_MODE=3
+CONFIG_SF_DEFAULT_MODE=0
 CONFIG_SF_DEFAULT_SPEED=1000000
 # CONFIG_SPI_FLASH_SFDP_SUPPORT is not set
+CONFIG_SPI_FLASH_SMART_HWCAPS=y
+# CONFIG_SPI_FLASH_SOFT_RESET is not set
 # CONFIG_SPI_FLASH_BAR is not set
 CONFIG_SPI_FLASH_UNLOCK_ALL=y
 # CONFIG_SF_DUAL_FLASH is not set
@@ -1181,6 +1183,7 @@ CONFIG_SPI_FLASH_UNLOCK_ALL=y
 # CONFIG_SPI_FLASH_SST is not set
 # CONFIG_SPI_FLASH_WINBOND is not set
 # CONFIG_SPI_FLASH_XMC is not set
+# CONFIG_SPI_FLASH_XTX is not set
 CONFIG_SPI_FLASH_USE_4K_SECTORS=y
 # CONFIG_SPI_FLASH_DATAFLASH is not set
 
@@ -1207,6 +1210,7 @@ CONFIG_NETDEVICES=y
 # CONFIG_BCMGENET is not set
 # CONFIG_CALXEDA_XGMAC is not set
 # CONFIG_DWC_ETH_QOS is not set
+# CONFIG_E1000 is not set
 # CONFIG_EEPRO100 is not set
 # CONFIG_ETH_DESIGNWARE is not set
 # CONFIG_ETH_DESIGNWARE_MESON8B is not set
@@ -1218,6 +1222,7 @@ CONFIG_NETDEVICES=y
 # CONFIG_FSLDMAFEC is not set
 # CONFIG_KS8851_MLL is not set
 # CONFIG_MACB is not set
+# CONFIG_PCH_GBE is not set
 # CONFIG_RGMII is not set
 # CONFIG_MII is not set
 # CONFIG_PCNET is not set
@@ -1232,6 +1237,7 @@ CONFIG_NETDEVICES=y
 # CONFIG_DRIVER_TI_CPSW is not set
 # CONFIG_DRIVER_TI_EMAC is not set
 # CONFIG_DRIVER_TI_KEYSTONE_NET is not set
+# CONFIG_TULIP is not set
 # CONFIG_XILINX_AXIEMAC is not set
 # CONFIG_XILINX_EMACLITE is not set
 # CONFIG_ZYNQ_GEM is not set
@@ -1261,7 +1267,10 @@ CONFIG_PHY=y
 #
 # Rockchip PHY driver
 #
+# CONFIG_PHY_CADENCE_SIERRA is not set
+# CONFIG_PHY_CADENCE_TORRENT is not set
 CONFIG_PHY_SUN4I_USB=y
+# CONFIG_PHY_SUN50I_USB3 is not set
 # CONFIG_MVEBU_COMPHY_SUPPORT is not set
 
 #
@@ -1291,6 +1300,11 @@ CONFIG_SUNXI_NO_PMIC=y
 # CONFIG_PWM_SANDBOX is not set
 # CONFIG_U_QE is not set
 # CONFIG_RAM is not set
+
+#
+# Reboot Mode Support
+#
+# CONFIG_DM_REBOOT_MODE is not set
 
 #
 # Remote Processor drivers
@@ -1392,9 +1406,11 @@ CONFIG_SPI_MEM=y
 # CONFIG_MTK_SNFI_SPI is not set
 # CONFIG_MVEBU_A3700_SPI is not set
 # CONFIG_MXS_SPI is not set
+# CONFIG_SPI_MXIC is not set
 # CONFIG_NXP_FSPI is not set
 # CONFIG_OMAP3_SPI is not set
 # CONFIG_PL022_SPI is not set
+# CONFIG_ROCKCHIP_SFC is not set
 # CONFIG_ROCKCHIP_SPI is not set
 # CONFIG_SPI_SIFIVE is not set
 # CONFIG_SOFT_SPI is not set
@@ -1448,7 +1464,6 @@ CONFIG_DM_USB=y
 # CONFIG_USB_XHCI_HCD is not set
 # CONFIG_USB_EHCI_HCD is not set
 # CONFIG_USB_OHCI_HCD is not set
-# CONFIG_USB_OHCI_PCI is not set
 # CONFIG_USB_UHCI_HCD is not set
 # CONFIG_USB_DWC2 is not set
 # CONFIG_USB_R8A66597_HCD is not set
@@ -1466,10 +1481,6 @@ CONFIG_DM_USB=y
 #
 # CONFIG_USB_MUSB_HOST is not set
 # CONFIG_USB_MUSB_GADGET is not set
-# CONFIG_USB_MUSB_DA8XX is not set
-# CONFIG_USB_MUSB_TI is not set
-# CONFIG_USB_MUSB_AM35X is not set
-# CONFIG_USB_MUSB_DSPS is not set
 # CONFIG_USB_MUSB_PIO_ONLY is not set
 
 #
@@ -1482,16 +1493,6 @@ CONFIG_DM_USB=y
 #
 # ULPI drivers
 #
-
-#
-# USB peripherals
-#
-CONFIG_USB_STORAGE=y
-CONFIG_USB_KEYBOARD=y
-CONFIG_USB_KEYBOARD_FN_KEYS=y
-# CONFIG_SYS_USB_EVENT_POLL is not set
-CONFIG_SYS_USB_EVENT_POLL_VIA_INT_QUEUE=y
-# CONFIG_SYS_USB_EVENT_POLL_VIA_CONTROL_EP is not set
 CONFIG_USB_GADGET=y
 CONFIG_USB_GADGET_MANUFACTURER="Allwinner Technology"
 CONFIG_USB_GADGET_VENDOR_NUM=0x1f3a
@@ -1506,7 +1507,6 @@ CONFIG_USB_GADGET_VBUS_DRAW=2
 CONFIG_SDP_LOADADDR=0
 # CONFIG_USB_GADGET_DOWNLOAD is not set
 # CONFIG_USB_ETHER is not set
-# CONFIG_USB_HOST_ETHER is not set
 
 #
 # UFS Host Controller Support
@@ -1546,6 +1546,7 @@ CONFIG_SIMPLE_PANEL=y
 # CONFIG_VIDEO_LCD_RAYDIUM_RM68200 is not set
 # CONFIG_VIDEO_LCD_SSD2828 is not set
 # CONFIG_VIDEO_LCD_TDO_TL070WSH30 is not set
+# CONFIG_VIDEO_LCD_HITACHI_TX18D42VM is not set
 # CONFIG_VIDEO_MESON is not set
 # CONFIG_VIDEO_MVEBU is not set
 CONFIG_I2C_EDID=y
@@ -1567,6 +1568,7 @@ CONFIG_CONSOLE_SCROLL_LINES=1
 CONFIG_VIDEO_DW_HDMI=y
 # CONFIG_VIDEO_SIMPLE is not set
 CONFIG_VIDEO_DT_SIMPLEFB=y
+# CONFIG_VIDEO_MCDE_SIMPLE is not set
 # CONFIG_OSD is not set
 # CONFIG_SPLASH_SCREEN is not set
 # CONFIG_VIDEO_BMP_RLE8 is not set
@@ -1605,7 +1607,7 @@ CONFIG_WATCHDOG_TIMEOUT_MSECS=60000
 #
 # File systems
 #
-# CONFIG_FS_BTRFS is not set
+CONFIG_FS_BTRFS=y
 # CONFIG_FS_CBFS is not set
 # CONFIG_SPL_FS_CBFS is not set
 CONFIG_FS_EXT4=y
@@ -1626,6 +1628,7 @@ CONFIG_FS_FAT_MAX_CLUSTSIZE=65536
 # CONFIG_BCH is not set
 CONFIG_BINMAN_FDT=y
 # CONFIG_CC_OPTIMIZE_LIBS_FOR_SPEED is not set
+CONFIG_CHARSET=y
 # CONFIG_DYNAMIC_CRC_TABLE is not set
 CONFIG_LIB_UUID=y
 CONFIG_PRINTF=y
@@ -1642,6 +1645,7 @@ CONFIG_LIB_RAND=y
 # CONFIG_LIB_HW_RAND is not set
 # CONFIG_SPL_TINY_MEMSET is not set
 # CONFIG_TPL_TINY_MEMSET is not set
+CONFIG_RBTREE=y
 # CONFIG_BITREVERSE is not set
 # CONFIG_TRACE is not set
 # CONFIG_CMD_DHRYSTONE is not set
@@ -1650,6 +1654,7 @@ CONFIG_LIB_RAND=y
 # Security support
 #
 # CONFIG_AES is not set
+# CONFIG_ECDSA is not set
 # CONFIG_RSA is not set
 # CONFIG_ASYMMETRIC_KEY_TYPE is not set
 # CONFIG_TPM is not set
@@ -1663,22 +1668,24 @@ CONFIG_LIB_RAND=y
 #
 CONFIG_SHA1=y
 CONFIG_SHA256=y
-# CONFIG_SHA512_ALGO is not set
+# CONFIG_SHA512 is not set
+# CONFIG_SHA384 is not set
 # CONFIG_SHA_HW_ACCEL is not set
 CONFIG_MD5=y
-# CONFIG_SPL_MD5 is not set
+CONFIG_CRC32C=y
+CONFIG_XXHASH=y
 
 #
 # Compression Support
 #
 CONFIG_LZ4=y
 CONFIG_LZMA=y
-# CONFIG_LZO is not set
+CONFIG_LZO=y
 CONFIG_GZIP=y
 # CONFIG_ZLIB_UNCOMPRESS is not set
 # CONFIG_BZIP2 is not set
 CONFIG_ZLIB=y
-# CONFIG_ZSTD is not set
+CONFIG_ZSTD=y
 # CONFIG_SPL_LZ4 is not set
 # CONFIG_SPL_LZMA is not set
 # CONFIG_SPL_LZO is not set
@@ -1699,6 +1706,8 @@ CONFIG_TPL_OF_LIBFDT_ASSUME_MASK=0xff
 # System tables
 #
 CONFIG_GENERATE_SMBIOS_TABLE=y
+# CONFIG_LIB_RATIONAL is not set
+# CONFIG_SPL_LIB_RATIONAL is not set
 # CONFIG_SMBIOS_PARSER is not set
 CONFIG_EFI_LOADER=y
 CONFIG_CMD_BOOTEFI_BOOTMGR=y
@@ -1731,3 +1740,4 @@ CONFIG_LMB_MAX_REGIONS=8
 # Tools options
 #
 CONFIG_MKIMAGE_DTC_PATH="dtc"
+CONFIG_TOOLS_LIBCRYPTO=y
