[wvkbd] Update to 0.5 [bemenu] Update to 0.6.4

--- a/wayland/bemenu/build
+++ b/wayland/bemenu/build
@@ -1,4 +1,6 @@
 #!/bin/sh -e
 
+sed -i "s/ || printf 'nogit'//" GNUmakefile
+
 make clients wayland PREFIX=/usr
 make PREFIX=/usr DESTDIR="$1" install
