--- a/extra/python/build
+++ b/extra/python/build
@@ -27,7 +27,8 @@ if [ $KISS_XHOST_ARCH == "powerpc64" ]; then
 fi
 
 # Python has problems determining the build triples
-sed -i "s/-linux-gnu/-linux-musl/g" configure
+sed -i "s/-linux-gnu$/-linux-$KISS_XHOST_ABI/g" configure
+sed -i "s/arm-linux-gnueabihf$/armv7-linux-musleabihf/g" configure
 sed -i "s/MULTIARCH=\$(.*/MULTIARCH=$KISS_XHOST_TRIPLE/g" configure
 
 ac_cv_file__dev_ptc=no \
